# My_code

./: .gitignore  Allcode.sln  README.md  a.out
UML/: test1.puml
UML/ex1/: ex1_1.puml  ex1_2.puml
UML/ex2/: ex2_1.puml  ex2_2.puml
UML/ex3/: ex3_1.puml  ex3_2.puml  ex3_3.puml  ex3_4.puml
c#/test1-MiniAPI/: Program.cs  test1-MiniAPI.csproj
c#/test1-Minimal/: Program.cs  test1-Minimal.sln
c#/test2-Mvc/: Program.cs  appsettings.json  test2-Mvc.csproj
c-c++/: DNode_test.c  LNode_test.c  SqQueue_test.c  leetcode-6.c
c-c++/data_structure/: CreateInorderThread.c  DNode_test.c  Kmp_test.c  SqStack_test.c
c-c++/leetcode/: leetcode-100.c  leetcode-101.c  leetcode-11.c  leetcode-12.c  leetcode-2.c  leetcode-20.c  leetcode-3.c  leetcode-4.c  leetcode-5.c  leetcode-6.c  leetcode-7.c  leetcode-8.c  leetcode-94.c
c-c++/shuju/: SqList_test.c  SqStack_test.c
c-c++/shujuku/: Kmp_test.c  LNode_test.c  SqList_test.c
c-c++/software_test/: CMakeLists.txt
c-c++/software_test/test1/: CMakeLists.txt
c-c++/software_test/test1/src/: nextdate.cpp  nextdate.h
c-c++/software_test/test1/test/: CMakeCache.txt  CT_test_data.txt  RT_test_data.csv  generate_test_data.py  nextdate.mod  test_nextdate.cc  test_nextdate_decision_condition.cc  test_nextdate_from_csv.cc  test_nextdate_mcdc.cc  test_nextdate_pict.cc  test_nextdate_statement_branch.cc
c-c++/software_test/test2/: test_12306.py
c代码/: default.c  leetcode-2  leetcode-2.c  leetcode-20.c  leetcode-3.c  leetcode-88.c
python/五子棋/: button.py  config.py  double_game.py  hard.py  main.py  menu.py  over.py  vs_ai.py
(+32 files in other folders)
